--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -41,11 +41,11 @@ jobs:
           plugin_languages_analysis_timeout: 15
           plugin_languages_analysis_timeout_repositories: 7.5
           plugin_languages_ignored: html, css
-          plugin_languages_categories: markup, programming, data, prose
+          plugin_languages_categories: markup, programming
           plugin_languages_colors: github
-          plugin_languages_limit: 8
-          plugin_languages_recent_categories: markup, programming, data, prose
-          plugin_languages_recent_days: 300
+          plugin_languages_limit: 7
+          plugin_languages_recent_categories: markup, programming
+          plugin_languages_recent_days: 100
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
@@ -55,4 +55,4 @@ jobs:
           plugin_posts_source: dev.to
           plugin_posts_user: TiagoDanin
           plugin_posts_limit: 3
-          repositories_forks: true
+          repositories_forks: false
