--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -34,7 +34,7 @@ jobs:
           plugin_wakatime_days: 7
           plugin_wakatime_limit: 5
           plugin_wakatime_repositories_visibility: all
-          plugin_wakatime_sections: time, languages, languages-graphs, editors, os
+          plugin_wakatime_sections: time, languages, languages-graphs, editors, editors-graphs, os
           plugin_wakatime_url: https://wakatime.com
           plugin_wakatime_user: TiagoDanin
           plugin_languages: yes
@@ -43,10 +43,11 @@ jobs:
           plugin_languages_ignored: html, css
           plugin_languages_categories: markup, programming
           plugin_languages_colors: github
-          plugin_languages_limit: 7
+          plugin_languages_limit: 5
           plugin_languages_recent_categories: markup, programming
           plugin_languages_recent_days: 100
           plugin_languages_recent_load: 300
+          plugin_languages_details: percentage
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
           plugin_achievements: true
