--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -34,11 +34,11 @@ jobs:
           plugin_wakatime_days: 7
           plugin_wakatime_limit: 5
           plugin_wakatime_repositories_visibility: all
-          plugin_wakatime_sections: time, languages, languages-graphs, editors, editors-graphs, os
+          plugin_wakatime_sections: languages, languages-graphs, editors-graphs, os
           plugin_wakatime_url: https://wakatime.com
           plugin_wakatime_user: TiagoDanin
           plugin_languages: yes
-          plugin_languages_analysis_timeout: 15
+          plugin_languages_analysis_timeout: 45
           plugin_languages_analysis_timeout_repositories: 7.5
           plugin_languages_ignored: html, css, csharp, shaderlab, hlsl
           plugin_languages_colors: github
